nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
